fix(UserProfile): fix first render flicker issue

--- a/src/views/User/UserProfile/Placeholder/styles.module.css
+++ b/src/views/User/UserProfile/Placeholder/styles.module.css
@@ -27,3 +27,13 @@
     margin-top: var(--spacing-x-tight);
   }
 }
+
+.text {
+  width: 100%;
+  height: 1rem;
+  background: var(--color-grey-lighter);
+
+  & + & {
+    margin-top: var(--spacing-x-tight);
+  }
+}
